# cc_v2

./: .gitignore  CMakeLists.txt
cc_v2/: CMakeLists.txt  bishop.cpp  bishop.h  board.cpp  board.h  cc_v2.cpp  cc_v2.h  empty_square.h  king.cpp  king.h  knight.cpp  knight.h  move.cpp  move.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
